# ingest_framework

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  teste.yaml
dags/: generated_dag.py
src/: file_generator.py  handler_factory.py  main.py  query_factory.py  teste.yaml  utils.py  yaml_reader.py
src/generator/: file_generator.py  query_generator.py
src/generator/dags/: dag_stately-lodge-369614_gcp_dev_mercantil_framework.py
src/generator/templates/: dag_template.py.j2  dag_template.sql.j2  query_template_merge_snflk.sql.j2
src/handlers/: __init__.py  bigquery_handler.py  database_handler.py  handler_factory.py
src/loaders/: full_load.py
src/query/: stately-lodge-369614_gcp_dev_mercantil_framework_origin.sql
src/templates/: query_template.sql.j2
src/utils/: bq_handler.py  database_handler.py  yaml_handler.py
